# BQ34Z100-Utils

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: compile.yml
src/: CMakeLists.txt  ChemIDMeasurer.cpp  ChemIDMeasurer.h  SOCTestSuite.cpp  SOCTestSuite.h  pins.h
